<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#89C14A"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/build_your_burrito"
        android:textColor="#023C04"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <TextView
        android:id="@+id/textViewOrderSummaryTitle"
        android:layout_width="149dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="99dp"
        android:text="@string/order_summary"
        android:textAlignment="center"
        android:textColor="#3F5A22"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="412dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:background="#002C02"
        android:text="@string/select_your_veggies"
        android:textAlignment="center"
        android:textColor="#FEFEFE"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextSizeCheck" />

    <CheckBox
        android:id="@+id/checkBoxCorn"
        android:layout_width="163dp"
        android:layout_height="33dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="72dp"
        android:onClick="priceUpdate"
        android:text="@string/corn_add_1_00"
        android:textColor="#080C03"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/checkBoxSpinach"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxTomatoes"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="412dp"
        android:layout_height="36dp"
        android:layout_marginTop="2dp"
        android:background="#002C02"
        android:text="@string/select_your_protein"
        android:textAlignment="center"
        android:textColor="#FEFEFE"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRedBeans"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="147dp"
        android:layout_height="94dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/burrito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewPrice"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/burrito"
        tools:ignore="ImageContrastCheck" />

    <CheckBox
        android:id="@+id/checkBoxSpinach"
        android:layout_width="128dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:text="@string/spinach_free"
        android:textColor="#080C03"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxLettuce"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="100dp"
        android:layout_height="49dp"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="2dp"
        android:text="@string/Pricing"
        android:textAlignment="center"
        android:textColor="#3F5A22"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <CheckBox
        android:id="@+id/checkBoxLettuce"
        android:layout_width="130dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/lettuce_free"
        android:textColor="#080C03"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="412dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:background="#002C02"
        android:text="@string/select_your_rice_and_beans"
        android:textAlignment="center"
        android:textColor="#FDFDFD"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxBrownRice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxCorn"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="58dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="108dp"
        android:backgroundTint="#18510A"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:onClick="orderSummary"
        android:padding="3dp"
        android:paddingLeft="3dp"
        android:text="@string/order_summaryl_large"
        android:textAlignment="textStart"
        android:textColor="#FEFEFE"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="0dp"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlHardcoded,RtlSymmetry,TextSizeCheck"
        tools:text="ORDER SUMMARY" />

    <CheckBox
        android:id="@+id/checkBoxTomatoes"
        android:layout_width="157dp"
        android:layout_height="33dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="76dp"
        android:text="@string/tomatoes_free"
        android:textColor="#080C03"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBoxLettuce"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textViewSummary"
        android:layout_width="158dp"
        android:layout_height="86dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="56dp"
        android:textColor="#3F5A22"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrderSummaryTitle"
        app:layout_constraintVertical_bias="0.388" />

    <CheckBox
        android:id="@+id/checkBoxBrownRice"
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="7dp"
        android:text="@string/brown_rice_free"
        android:textColor="#080C03"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxBlackBeans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="TouchTargetSizeCheck,TextSizeCheck" />

    <CheckBox
        android:id="@+id/checkBoxWhiteRice"
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="5dp"
        android:text="@string/white_rice_free"
        android:textColor="#080C03"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/checkBoxRedBeans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxBrownRice"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/checkBoxBlackBeans"
        android:layout_width="154dp"
        android:layout_height="33dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="85dp"
        android:text="@string/black_beans_free"
        android:textColor="#080C03"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBoxBrownRice"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="TouchTargetSizeCheck,TextSizeCheck" />

    <CheckBox
        android:id="@+id/checkBoxRedBeans"
        android:layout_width="180dp"
        android:layout_height="33dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="60dp"
        android:onClick="priceUpdate"
        android:text="@string/red_beans_add_1_00"
        android:textColor="#080C03"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkBoxWhiteRice"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxBlackBeans"
        tools:ignore="TouchTargetSizeCheck,TextSizeCheck" />

    <CheckBox
        android:id="@+id/checkBoxChicken"
        android:layout_width="180dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="215dp"
        android:onClick="priceUpdate"
        android:text="@string/chicken_add_1_00"
        android:textColor="#080C03"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/checkBoxPork"
        android:layout_width="146dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="249dp"
        android:onClick="priceUpdate"
        android:text="@string/pork_add_1_00"
        android:textColor="#080C03"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxChicken"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/checkBoxSteak"
        android:layout_width="144dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="19dp"
        android:onClick="priceUpdate"
        android:text="@string/steak_add_2_00"
        android:textColor="#080C03"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPork"
        tools:ignore="TouchTargetSizeCheck,TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>